# poc-cib

./: .gitignore  .gitmodules  README.md
cib-logging/: CMakeLists.txt  README.md  main.cpp
cib-logging/cmake/: catalog_helper.cmake  constants.cmake  helpers.cmake
cib-logging/libs/logging/: CMakeLists.txt
cib-logging/libs/logging/include/: logging.hpp
cib-logging/main/: CMakeLists.txt
cib-logging/main/include/: application.hpp
cib-logging/main/src/: application.cpp
cib-logging/tools/: log_parser.py
